# llm-context

./: .gitignore  README.md  benchmark_ranker.py  out.txt  pyproject.toml
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
llm_context/: __init__.py  cli.py  context.py  llm.py  ranker.py  scanner.py  trimmer.py
tests/: test_cli.py  test_ranker.py  test_scanner.py  test_security.py  test_security_exclusions.py  test_security_scanner.py  test_trimmer.py
